[-] FO : Product attribute listing display fixed (when names were too long)

--- a/themes/prestashop/css/global.css
+++ b/themes/prestashop/css/global.css
@@ -1925,7 +1925,10 @@ position:relative;
 	width:47%;
 	float:left;
 }
-#primary_block div#attributes p, #quantity_wanted_p{ height:2em; }
+#primary_block div#attributes p, #quantity_wanted_p{
+	clear: left;
+	height:2em;
+}
 
 /* prices */
 #primary_block form#buy_block p.price{
